Fix scale being too large in full screen

--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -221,6 +221,7 @@ body {
 
 #scale {
     width: 100%;
+    max-height: 30px;
 }
 
 #heightView {
